[metadata]
name = networking-midonet
summary = OpenStack MidoNet Neutron Plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/networking-midonet
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    midonet

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[compile_catalog]
directory = midonet/locale
domain = midonet

[update_catalog]
domain = midonet
output_dir = midonet/locale
input_file = midonet/locale/midonet.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = midonet/locale/midonet.pot

[entry_points]
console_scripts =
    midonet-db-manage = midonet.neutron.db.migration.cli:main
neutron.ml2.mechanism_drivers =
    midonet = midonet.neutron.ml2.mech_driver:MidonetMechanismDriver
neutron.ml2.type_drivers =
    midonet = midonet.neutron.ml2.type_midonet:MidonetTypeDriver
    uplink = midonet.neutron.ml2.type_uplink:UplinkTypeDriver
neutron.db.alembic_migrations =
    networking-midonet = midonet.neutron.db.migration:alembic_migration
neutron.core_plugins =
    midonet_v2 = midonet.neutron.plugin_v2:MidonetPluginV2
neutron.service_plugins =
    midonet_l3 = midonet.neutron.services.l3.l3_midonet:MidonetL3ServicePlugin
    midonet_firewall = midonet.neutron.services.firewall.plugin:MidonetFirewallPlugin
    midonet_gwdevice = midonet.neutron.services.gw_device.plugin:MidonetGwDeviceServicePlugin
    midonet_l2gw = midonet.neutron.services.l2gateway.plugin:MidonetL2GatewayPlugin
    midonet_bgp = midonet.neutron.services.bgp.plugin:MidonetBgpPlugin
    midonet_logging_resource = midonet.neutron.services.logging_resource.plugin:MidonetLoggingResourcePlugin
neutron.interface_drivers =
    midonet = midonet.neutron.agent.interface:MidonetInterfaceDriver
neutron.qos.notification_drivers =
    midonet = midonet.neutron.services.qos.driver:MidoNetQosServiceNotificationDriver
oslo.config.opts =
    midonet_v2 = midonet.neutron.common.config:list_opts
neutronclient.extension =
    gateway_device = midonet.neutronclient.gateway_device_extension._gateway_device
    remote_mac_entry = midonet.neutronclient.gateway_device_extension._remote_mac_entry
    logging_resource = midonet.neutronclient.logging_resource_extension._logging_resource
    firewall_log = midonet.neutronclient.logging_resource_extension._firewall_log
tempest.test_plugins =
    midonet = midonet.neutron.tests.tempest.plugin:NetworkingMidonetTempestPlugin
openstack.neutronclient.v2 =
    logging_resource_create = midonet.osc.logging_resource:CreateLoggingResource
    logging_resource_delete = midonet.osc.logging_resource:DeleteLoggingResource
    logging_resource_set = midonet.osc.logging_resource:SetLoggingResource
    logging_resource_list = midonet.osc.logging_resource:ListLoggingResource
    logging_resource_show = midonet.osc.logging_resource:ShowLoggingResource
os_vif =
    midonet = midonet.os_vif.vif_midonet:MidoNetPlugin

[wheel]
universal = 1
