[metadata]
name = networking-midonet
summary = OpenStack MidoNet Neutron Plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/networking-midonet/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    midonet

[compile_catalog]
directory = midonet/locale
domain = midonet

[update_catalog]
domain = midonet
output_dir = midonet/locale
input_file = midonet/locale/midonet.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = midonet/locale/midonet.pot

[entry_points]
console_scripts =
    midonet-db-manage = midonet.neutron.db.migration.cli:main
neutron.ml2.mechanism_drivers =
    midonet = midonet.neutron.ml2.mech_driver:MidonetMechanismDriver
neutron.ml2.type_drivers =
    midonet = midonet.neutron.ml2.type_midonet:MidonetTypeDriver
    uplink = midonet.neutron.ml2.type_uplink:UplinkTypeDriver
neutron.db.alembic_migrations =
    networking-midonet = midonet.neutron.db.migration:alembic_migration
neutron.service_plugins =
    midonet_l3 = midonet.neutron.services.l3.l3_midonet:MidonetL3ServicePlugin
    midonet_gwdevice = midonet.neutron.services.gw_device.plugin:MidonetGwDeviceServicePlugin
    midonet_l2gw = midonet.neutron.services.l2gateway.plugin:MidonetL2GatewayPlugin
    midonet_bgp = midonet.neutron.services.bgp.plugin:MidonetBgpPlugin
neutron.interface_drivers =
    midonet = midonet.neutron.agent.interface:MidonetInterfaceDriver
oslo.config.opts =
    midonet_v2 = midonet.neutron.common.config:list_opts
oslo.policy.policies =
    networking-midonet = midonet.neutron.policies:list_rules
neutron.policies =
    networking-midonet = midonet.neutron.policies:list_rules
neutronclient.extension =
    gateway_device = midonet.neutronclient.gateway_device_extension._gateway_device
    remote_mac_entry = midonet.neutronclient.gateway_device_extension._remote_mac_entry
flake8_import_order.styles =
    openstack = midonet.flake8_import_order.styles:OpenStack

